my second commit

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 
     <div class="disclaimer">
         Only one purchase per household.
-        <a href="#">
+        <a href="#"></a>
             <span class="footer-link">
-                <span class="disabled">
-                    Privacy Policy
-                </span>
+                 <span class="disabled"> Privacy Policy </span>
             </span>
+        
     </div>
 
     <div class="promo">
