last of the day

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </ul>
 </header>
-
+<article>
 <section>
     <div class="month-list">
         <ul>
@@ -33,35 +33,34 @@
         </ul>
     </div>
 </section>
-
+</article>
+<article>
 <section>
     <div class="grandparent">
         <div class="parent">
             <h4>Child of parent</h4>
             <div>
-                <div>I'm red!</div>
-                   <h4>I'm red's sister
-                <div>I'm blue!</div>
+                <div class="red">I'm red!</div>
+                   <h4>I'm red's sister</h4>
+                <div class="blue">I'm blue!</div>
                     <h4>I'm blue's brother</h4>
             </div>
         </div>
         <h4>Child of grandparent</h4>
     </div>
 </section>
-
+</article>
 <footer class="padded">
 
-    <div class="disclaimer">
-        Only one purchase per household.
-        <a href="#"></a>
+    <div class="disclaimer">Only one purchase per household. <a href="#"></a>
             <span class="footer-link">
-                 <span class="disabled"> Privacy Policy </span>
+                   <span class="disabled"> Privacy Policy </span>
             </span>
-        
     </div>
 
     <div class="promo">
-        Purchase a book today and receive the eBook for free!
+        <strong>Purchase a book today and receive the eBook for free!</strong>
+       
     </div>
 
     <span>
